--- a/index.css
+++ b/index.css
@@ -23,11 +23,12 @@ form{
 
 /* Sex radio button */
 .sex-group{
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .sex-option{
@@ -42,9 +43,10 @@ form{
 
 
 .sex-group label{
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+  width: 110px;
+  height: 110px;
+  line-height: 110px;
+  font-size: 50px;
   color: #F7E9D0;
   background-color: #FEB30F;
   clip-path: circle(50%);
@@ -108,6 +110,7 @@ form{
 
 /** Show weight**/
 #weight_show{
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
