Add plat detail

--- a/search_result.css
+++ b/search_result.css
@@ -36,7 +36,7 @@ button{
   width: 80%;
   display: flex;
   flex-direction: row;
-  align-items: ;
+  align-items: center;
   margin-bottom: 16px;
 }
 
