--- a/command.css
+++ b/command.css
@@ -4,13 +4,14 @@ h1{
 
 body{
   background-color: #FEC956;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin: 30px;
+  height: auto;
 }
 
+#container{
+  height: auto;
+  padding: 32px 32px 64px 32px;
+
+}
 
 /* Photo desp */
 
@@ -33,6 +34,7 @@ body{
   color:#D62F3F;
 
   background-color: #FEC956;
+  box-sizing: content-box;
   
 }
 .photo_desp{
