--- a/portail.css
+++ b/portail.css
@@ -1,82 +1,31 @@
-.save{
+#container{
+  box-sizing: border-box;
+  padding: 32px;
+}
 
+/* 输入框 */
+.input-group{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
 }
 
 .input-group label{
-  width: 30%;
-  display: inline-block;
-  color:#1D519E;
-  font-size: 30px;
-  font-weight: 900;
-  padding-left: 10%;
-  padding-top: 10%;
-  text-align: left;
-}
-
-/* Style the submit button */
-.input-group > input[type='text']{
-  width: 50%;
-  display:inline-block;
-  border-bottom: solid red;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
   font-size: 30px;
   color: #1D519E;
   font-weight: bolder;
-  text-align: center;
-  /* background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer; */
+  margin-left: 48px;
 }
 
-.input-group > .input-text > input[type='text']{
-  display: inline;
-  font-size: 25px;
-  color: #1D519E;
-}
-
-.input-group > .input-text > span{
-  text-align: center;
-  font-weight: 900;
-  font-size: 25px;
-  font-family: Arial, sans-serif;
-  color: #D62F3F;
-}
-
-
-form{
-  margin: 32px;
-}
-
-div{
-  width:100%;
-}
-
-
-
-input[type=radio] {
+.input-text {
   width: 40%;
-  display:inline;
-  /* background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer; */
+  margin-right: 48px;
 }
+
 
 input[type=submit] {
   width: 20%;
-  margin-left: 40%;
-  margin-right: 40%;
-  margin-top: 16px;
-  margin-bottom: 32px;
   display:block;
   text-align: center;
   background-color: #D62F3F;
