--- a/bottom_nav.css
+++ b/bottom_nav.css
@@ -16,6 +16,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  z-index: 10;
   /* margin: -5; */
   /* padding: 8px; */
 }
