--- a/search_recomd.css
+++ b/search_recomd.css
@@ -10,12 +10,23 @@ button{
   margin: 32px;
 }
 
+#toolbar{
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height:79px;
+  background-color: #F7E9CE;
+  z-index: 100;
+}
+
 #container{
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
   justify-content: space-between;
   align-items:center ;
+  padding-top: 76px;
+  padding-bottom: 64px;
 }
 
 
@@ -25,15 +36,22 @@ button{
   justify-content: space-around;
   flex-wrap: nowrap;
   align-items: center;
-  margin: 32px;
+
   width: 100%;
 }
 .result{
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 16px;
+}
+
+.img_content{
+  width: 238px;
+  height: 238px;
+  padding: 16px;
+  position: relative;
 }
 
 .result > img{
@@ -55,12 +73,36 @@ button{
   width:100%;
 }
 
+.kcal{
+  position: absolute;
+}
+
+.deco{
+  position: absolute;
+}
 
 #breakfast > div > h1{
   color:#FEC956;
 }
 
+#breakfast >.img_content > .kcal{
+  left: 0;
+  top: 10%;
+}
+
+#breakfast .deco{
+  right: 0;
+  top: 50%;
+  margin-top: -63px;
+  margin-right: -20px;
+
+}
+
 #breakfast > div > div{
+  border-color:#FEC956;
+}
+
+#breakfast > .img_content >{
   border-color:#FEC956;
 }
 
@@ -72,10 +114,36 @@ button{
   border-color:#D62F3F;
 }
 
+#lunch >.img_content > .kcal{
+  right: 0;
+  top: 10%;
+}
+
+#lunch .deco{
+  left: 0;
+  top: 50%;
+  margin-top: -63px;
+  margin-left: -20px;
+}
+
+
 #dinner > div > h1{
   color:#1D519E;
 }
 
 #dinner > div > div{
   border-color:#1D519E;
+}
+
+#dinner >.img_content > .kcal{
+  left: 0;
+  top: 10%;
+}
+
+#dinner .deco{
+  right: 0;
+  top: 50%;
+  margin-top: -63px;
+  margin-right: -20px;
+
 }
